fix z-index

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -21,7 +21,6 @@ body {
   align-items: top;
   padding-top: 2vh;
   padding-bottom: 2vh;
-  z-index: 1;
 }
 .upper-frame {
   display: flex;
@@ -33,7 +32,6 @@ body {
   width: 100%;
   background-color: var(--white);
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.1);
-  z-index: 499;
 }
 
 .upper-frame span {
